# GenericList

./: CMakeLists.txt  README.md  main.cpp  main.qml  specialiceditem.cpp  specialiceditem.h  specialicedlist.cpp  specialicedlist.h
genericListModel/: CMakeLists.txt  genericitemlist.cpp  genericitemlist.h  genericlistmodel.cpp  genericlistmodel.h  registertypes.h
